Added dependencies for each step in workflow.

--- a/notebooks/working-example.ipynb
+++ b/notebooks/working-example.ipynb
@@ -84,6 +84,8 @@
    "source": [
     "### Step 1: Query data\n",
     "\n",
+    "*Dependencies will be listed in the first step for which they are required, starting with: ``pygbif, pandas, loguru``*\n",
+    "\n",
     "The ``fetch`` module formats and submits queries to the Global Biodiversity Information Facility (GBIF) by way of the ``pygbif`` Python wrapper around the REST API.  The only required argument is a species name.  Users may optionally provide a set of additional parameters to customize queries.  Refer to the [GBIF occurrence API documentation](https://www.gbif.org/developer/occurrence) for parameter details and formatting.\n",
     "\n",
     "After retrieving occurrence data, the ``fetch`` module normalizes the data and removes duplicates in advance of downstream conversion to the GeoJSON format."
@@ -112,6 +114,8 @@
    "source": [
     "### Step 2: Convert data to GeoJSON format\n",
     "\n",
+    "*Required for this step: ``numpy, shapely, geojson``*\n",
+    "\n",
     "The ``jsonify`` module accepts input data from the ``fetch`` module, filters outlier points, calculates geometric range shapes, and writes point and polygon information to the GeoJSON format as feature collections.  The user may optionally set the scalar float value used to set the outlier threshold (defaults to 3)."
    ]
   },
@@ -137,7 +141,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From here, the workflow forks and the user may proceed to either static mapping or interactive mapping (or both)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Step 3a: Static mapping\n",
+    "\n",
+    "*Required for this step: ``geopandas, matplotlib, contextily, seaborn``*\n",
     "\n",
     "The ``smap`` module combines the ``matplotlib`` and ``contextily`` libraries to generate static georeferenced plots of occurrence data.  The ``SingleSMap`` class object manages plotting of occurrence data from a single taxon, initializing with a single GeoJSON file.  The ``MultiSMap`` class object handles data from multiple taxa, initializing with a list of GeoJSON files.\n",
     "\n",
@@ -265,6 +278,8 @@
    "metadata": {},
    "source": [
     "### Step 3b: Interactive mapping\n",
+    "\n",
+    "*Required for this step: ``geopandas, folium``*\n",
     "\n",
     "The ``imap`` module leverages the ``folium`` library to generate interactive plots of occurrence data.  The ``IMap`` class object accepts one or a list of multiple GeoJSON files.  For each file, the module generates occurrence points, the geometric range, and outliers on separate layers; the user may toggle these layers and check the GBIF occurrence metadata for any individual point."
    ]
